--- a/pom.xml
+++ b/pom.xml
@@ -29,75 +29,58 @@
       <id>sk89q-repo</id>
       <url>http://mvn2.sk89q.com/repo</url>
     </repository>
-
-    <repository>
-      <id>somethingodd-repo</id>
-      <url>http://somethingodd.info/nexus/content/groups/public</url>
-    </repository>
-
-    <repository>
-      <id>allele-repo</id>
-      <url>http://repo.allele.tk</url>
-    </repository>
   </repositories>
 
   <dependencies>
     <!-- JUnit -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.8.2</version>
-      <type>jar</type>
-      <scope>test</scope>
-      <optional>true</optional>
-    </dependency>
 
     <!-- Bukkit -->
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.2.5-R1.0</version>
-      <scope>compile</scope>
+      <version>1.5.2-R1.0</version>
     </dependency>
 
     <!-- petteyg's OddItem -->
     <dependency>
-      <groupId>info.somethingodd</groupId>
+      <groupId>com.somethingodd</groupId>
       <artifactId>odditem</artifactId>
       <version>0.9.5</version>
-      <scope>compile</scope>
     </dependency>
 
     <!-- Milkbowl's Vault -->
     <dependency>
       <groupId>net.milkbowl</groupId>
       <artifactId>vault</artifactId>
-      <version>1.2.12</version>
-      <scope>compile</scope>
+      <version>1.2.26</version>
     </dependency>
 
     <!-- Acru's Lockette -->
     <dependency>
       <groupId>org.yi.acru</groupId>
       <artifactId>lockette</artifactId>
-      <version>1.3.8</version>
-      <scope>compile</scope>
+      <version>1.7.12</version>
     </dependency>
 
     <!-- Hidendra's LWC -->
     <dependency>
       <groupId>com.griefcraft</groupId>
       <artifactId>lwc</artifactId>
-      <version>4.0.9</version>
-      <scope>compile</scope>
+      <version>4.4.0</version>
     </dependency>
 
     <!-- sk89q's WorldGuard -->
     <dependency>
       <groupId>com.sk89q</groupId>
       <artifactId>worldguard</artifactId>
-      <version>5.5.1</version>
-      <scope>compile</scope>
+      <version>5.8</version>
+    </dependency>
+    
+    <!--  Bekvon's Residence (must be installed to local repo manually) -->
+    <dependency>
+    <groupId>com.bekvon</groupId>
+    <artifactId>residence</artifactId>
+    <version>2.6.6.5</version>
     </dependency>
   </dependencies>
 
@@ -115,8 +98,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
 
